<resources>
    <string name="app_name">eléncho</string>

    <!-- BottomNavigation -->
    <string name="bottom_navigation_today">Today</string>
    <string name="bottom_navigation_next_7_days">Next 7 Days</string>
    <string name="bottom_navigation_time_machine">Time Machine</string>
    <string name="bottom_navigation_canteen">Canteen Menu</string>
    <string name="bottom_navigation_settings">Settings</string>

    <!-- Errors -->
    <string name="empty_timetable">Lucky you, you don\'t have any courses, enjoy!</string>
    <string name="error_while_getting_timetable">Oh no, an error occurred and the timetable cannot be shown, try again.</string>

    <!-- DateIntervalBottomSheet -->
    <string name="from_date">Start date</string>
    <string name="to_date">End date</string>
    <string name="choose_date_interval">Choose a time interval</string>
    <string name="time_travel">Time travel</string>

    <!-- ConfigurationActivity -->
    <string name="configure_app_header">Lets configure the app in just a few steps</string>
    <string name="configure_app_description">This process is needed in order for the app to work. Don\'t worry it will take only a few minutes.</string>
    <string name="configuration_daily_notification_title">Daily notification</string>
    <string name="configuration_daily_notification_description">Be notified each day about the courses you have.</string>
    <string name="save_configuration">Save preferences</string>

    <!-- Configurations -->
    <string name="configuration_study_plan_title">Setup your study plan</string>
    <string name="configuration_study_plan_description">In order to use the application you need to choose your study plan.</string>

    <!-- Dialogs -->
    <string name="study_plan_dialog_title">Choose your study plan</string>
    <string name="study_plan_dialog_hint">Paste the timetable url</string>

    <!-- Preferences -->
    <string name="preference_category_personalization_title">Personalization</string>
    <string name="preference_configuration_title">Configure the app</string>
    <string name="preference_configuration_summary">Reconfigure the app so that you can track new courses or set a new time for the daily notification.</string>
    <string name="preference_category_information_title">Information</string>
    <string name="preference_contact_title">Contact developer</string>
    <string name="preference_contact_summary">This application was developed by Riccardo Busetti, if you have any questions feel free to contact me.</string>

    <!-- WebViewBottomSheet -->
    <string name="copy_link">Copy link</string>
    <string name="website_loading">The website is loading…</string>
    <string name="error_while_reading_link">Error while reading link, try again.</string>
    <string name="copy_link_tutorial">Search for your timetable and then press the button below.</string>

    <!-- ListHeaders -->
    <string name="now">Now</string>
    <string name="upcoming_lectures">Upcoming lectures</string>

    <!-- DailyNotification -->
    <string name="daily_notification_courses_title">You have %1$d courses today</string>
    <string name="daily_notification_courses_text">The first course will start at %1$s</string>
    <string name="daily_notification_courses_big_text">%1$s - %2$s</string>
    <string name="daily_notification_no_courses_title">You don\'t have any courses today</string>
    <string name="daily_notification_no_courses_text">Enjoy your day</string>

    <!-- Setup -->
    <string name="next">Next</string>
    <string name="choose_faculty_header">Choose courses</string>
    <string name="choose_faculty_description">It\'s time to select which courses you want to track.</string>
    <string name="choose_time">Choose time</string>
    <string name="finish">Finish</string>
    <string name="choose_notification_time_header">Choose daily notification time</string>
    <string name="choose_notification_time_description">The app can help you remeber the daily courses, so that you won\'t miss one.</string>
    <string name="retry">Retry</string>
    <string name="error_message">An error occurred, try again.</string>
    <string name="check_availability">Check availability</string>
    <string name="availability_for">Availability for %1$s</string>
    <string name="room_example">E.g. BZ F0.01, BZ C3.06</string>
</resources>
