<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/preference_category_personalization_title">

        <Preference
            android:icon="@drawable/ic_brush"
            android:key="preference_configuration"
            android:summary="@string/preference_configuration_summary"
            android:title="@string/preference_configuration_title" />

        <SwitchPreferenceCompat
            android:icon="@drawable/ic_notifications"
            android:key="preference_daily_notification"
            android:summary="Daily notification"
            android:title="Daily notification" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preference_category_information_title">

        <Preference
            android:icon="@drawable/ic_email"
            android:key="preference_contact"
            android:summary="@string/preference_contact_summary"
            android:title="@string/preference_contact_title" />

    </PreferenceCategory>

    <PreferenceCategory android:title="This application is still under development, so please be patient, new features will be added soon." />

</PreferenceScreen>