<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_today"
        android:enabled="true"
        android:icon="@drawable/ic_today"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_next_7_days"
        android:enabled="true"
        android:icon="@drawable/ic_next_7_days"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_time_machine"
        android:enabled="true"
        android:icon="@drawable/ic_time_machine"
        android:title="@string/bottom_navigation_time_machine"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_canteen"
        android:enabled="true"
        android:icon="@drawable/ic_canteen"
        android:title="@string/bottom_navigation_canteen"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:enabled="true"
        android:icon="@drawable/ic_settings"
        android:title="@string/bottom_navigation_settings"
        app:showAsAction="ifRoom" />
</menu>